[package]
name = "hldr"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
postgres = "0.19.2"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "cargo", "derive", "suggestions"]

[dev-dependencies]
chrono = "0.4.19"
postgres = {version = "0.19.2", features = ["with-chrono-0_4"] }
