[package]
name = "hldr"
description = "Declarative and expressive data seeding for PostgreSQL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kevlarr/hldr"
version = "0.3.0"
edition = "2021"

[dependencies]
postgres = "0.19.2"
toml = "0.5.9"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "cargo", "derive", "suggestions"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
chrono = "0.4.19"
postgres = {version = "0.19.3", features = ["with-chrono-0_4"] }
pretty_assertions = "1.2.1"
